--- a/website/templates/transact.html
+++ b/website/templates/transact.html
@@ -2,7 +2,7 @@
 {% block title %}Transaction{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="table-responsive">
 	<br>
 	<br>
 	<table class="table table-hover">
