--- a/website/templates/service.html
+++ b/website/templates/service.html
@@ -2,6 +2,15 @@
 {% block title %}Our Services{% endblock %}
 
 {% block content %}
+<style type="text/css">
+	@media screen and (max-width: 768px) {
+	.btn {
+    display: block;
+    width: auto;
+    float: none;
+}
+</style>
+
 <div class="container">
 	<br>
 	<br>
