--- a/website/templates/transact.html
+++ b/website/templates/transact.html
@@ -5,7 +5,7 @@
 <div class="table-responsive">
 	<br>
 	<br>
-	<table class="table table-hover">
+	<table class="table">
 	<tr class="table-active">
 		<th>Date</th>
 		<th>Deposit</th>
